# maskON

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
corpus/: annotated.jsonl
maskon/: models.py
maskon/api/: app.py  logging_config.py  metrics.py  schemas.py
maskon/detectors/: base.py  carte_bancaire.py  email.py  iban.py  nir.py  siren.py  tel.py
maskon/detectors/validators/: cle_nir.py  luhn.py  mod97.py
maskon/evaluation/: calibrate.py  corpus.py  evaluate.py  metrics.py  models.py
maskon/masking/: apply.py  strategies.py
maskon/service/: merge.py  redaction.py
maskon/streaming/: stream.py
scripts/: benchmark.py  calibrate.py  evaluate.py
tests/: test_api.py  test_calibrate.py  test_carte_bancaire.py  test_cle_nir.py  test_email.py  test_evaluation.py  test_iban.py  test_logging.py  test_luhn.py  test_masking.py  test_merge.py  test_metrics.py  test_mod97.py  test_nir.py  test_properties.py  test_service.py  test_siren.py  test_streaming.py  test_tel.py
