[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "maskon"
version = "0.1.0"
description = "Detection and masking of personally identifiable information (PII), French formats."
license = "AGPL-3.0-or-later"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "prometheus-client>=0.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=9",
    "pytest-cov>=5",
    "ruff>=0.15",
    "mypy>=1.10",
    "httpx>=0.27",     # FastAPI's TestClient
    "hypothesis>=6",   # property-based tests
]

[tool.setuptools.packages.find]
include = ["maskon*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff.lint]
# E/F = pycodestyle + pyflakes (defaults); I = import sorting;
# UP = modern syntax; B = common bug traps.
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true

# Tests stay strict on real type errors, but pytest functions don't need
# return annotations — the standard convention in serious Python projects.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.coverage.run]
source = ["maskon"]

[tool.coverage.report]
show_missing = true
fail_under = 95
